--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="navbar">
+            <div class="container"></div>
             <h1 class="logo"><a href="index.html">HBO</a></h1>
-            <ul class="main-nav">
+            <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a class="current" href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="dist/about.html">About</a>
@@ -23,7 +24,9 @@
                     <a href="dist/contact.html">Contact</a>
                 </li>
             </ul>
+        </div>
         </nav>
+    
     </header>
 </body>
 </html>
