--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
             </ul>
         </div>
         </nav>
-    
+        <div id="showcase">
+            <div class="container">
+                <div class="showcase-content">
+                    <h1> <span class="text-primary">Enjoy</span> Your Stay</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet sint atque doloribus non ipsum sequi?</p>
+                    <a class="btn" href="dist/about.html">About Our Services</a>
+                </div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
