added home info

--- a/index.html
+++ b/index.html
@@ -30,11 +30,19 @@
             <div class="container">
                 <div class="showcase-content">
                     <h1> <span class="text-primary">Enjoy</span> Your Stay</h1>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet sint atque doloribus non ipsum sequi?</p>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet sint atque doloribus non ipsum sequi.</p>
                     <a class="btn" href="dist/about.html">About Our Services</a>
                 </div>
             </div>
         </div>
     </header>
+    <section id="home-info" class="bg-dark">
+        <div class="info-img"></div>
+        <div class="info-content">
+            <h2>The<span class="text-primary"> History</span> Of Our Hotel</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, doloremque culpa in error cupiditate ullam quasi quos illum exercitationem dolorum commodi saepe quia, non dicta maiores consequuntur est, veniam voluptate! Fugit delectus repudiandae, sed facere labore ullam consequatur itaque quaerat!</p>
+            <a href="dist/about.html" class="btn btn-light">Read More</a>
+        </div>
+    </section>
 </body>
 </html>
