--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ddb39df376.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Hotel Booking Online</title>
 </head>
@@ -40,8 +41,25 @@
         <div class="info-img"></div>
         <div class="info-content">
             <h2>The<span class="text-primary"> History</span> Of Our Hotel</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, doloremque culpa in error cupiditate ullam quasi quos illum exercitationem dolorum commodi saepe quia, non dicta maiores consequuntur est, veniam voluptate! Fugit delectus repudiandae, sed facere labore ullam consequatur itaque quaerat!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, doloremque culpa in error cupiditate ullam quasi quos illum exercitationem dolorum commodi saepe quia, non dicta maiores consequuntur est, veniam voluptate! Fugit delectus repudiandae, sed facere labore ullam.</p>
             <a href="dist/about.html" class="btn btn-light">Read More</a>
+        </div>
+    </section>
+    <section id="features">
+        <div class="box bg-light">
+            <i class="fas fa-hotel fa-3x"></i>
+            <h3>Great Location</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, tempore. </p>
+        </div>
+        <div class="box bg-primary">
+            <i class="fas fa-utensils fa-3x"></i>
+            <h3>Free Meals</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, tempore. </p>
+        </div>
+        <div class="box bg-light">
+            <i class="fas fa-dumbbell fa-3x"></i>
+            <h3>Fitness Room</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, tempore. </p>
         </div>
     </section>
 </body>
