--- a/index.html
+++ b/index.html
@@ -62,5 +62,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, tempore. </p>
         </div>
     </section>
+    <div class="clr"></div>
+    <footer id="main-footer">
+        <p>Hotel Booking Online || HBO &copy; 2020 || All Right Reserved </p>
+    </footer>
 </body>
 </html>
