--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Hotel Booking Online</title>
 </head>
+
 <body>
     <header>
         <nav id="navbar">
@@ -25,13 +27,14 @@
                     <a href="dist/contact.html">Contact</a>
                 </li>
             </ul>
-        </div>
+            </div>
         </nav>
         <div id="showcase">
             <div class="container">
                 <div class="showcase-content">
                     <h1> <span class="text-primary">Enjoy</span> Your Stay</h1>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet sint atque doloribus non ipsum sequi.</p>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet sint atque doloribus
+                        non ipsum sequi.</p>
                     <a class="btn" href="dist/about.html">About Our Services</a>
                 </div>
             </div>
@@ -41,7 +44,9 @@
         <div class="info-img"></div>
         <div class="info-content">
             <h2>The<span class="text-primary"> History</span> Of Our Hotel</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, doloremque culpa in error cupiditate ullam quasi quos illum exercitationem dolorum commodi saepe quia, non dicta maiores consequuntur est, veniam voluptate! Fugit delectus repudiandae, sed facere labore ullam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, doloremque culpa in error cupiditate ullam
+                quasi quos illum exercitationem dolorum commodi saepe quia, non dicta maiores consequuntur est, veniam
+                voluptate! Fugit delectus repudiandae, sed facere labore ullam.</p>
             <a href="dist/about.html" class="btn btn-light">Read More</a>
         </div>
     </section>
@@ -67,4 +72,5 @@
         <p>Hotel Booking Online || HBO &copy; 2020 || All Right Reserved </p>
     </footer>
 </body>
+
 </html>
